# tensorwasm

./: .bazelrc  .gitignore  BUILD  README.md  WORKSPACE  requirements.txt  requirements_lock.txt
src/engine/: BUILD  README.md  cbindgen.toml
src/engine/include/: BUILD
src/engine/src/: host.rs  lib.rs  main.rs
src/engine_cpp/: BUILD  hello.cc
src/examples/zero_out/: .gitignore  BUILD  Cargo.toml  README.MD  build.sh  import.wit  interface.wit
src/examples/zero_out/src/: guest.rs  lib.rs
src/tf_op/: BUILD  main.py  op.cc
tools/cxx/: BUILD  rust_cxx_bridge.bzl  test.rs
tools/tensorflow/: foo.bzl
